# scitex-hpc

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/workflows/: cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-hpc-quality-audit-on-ubuntu-latest.yml  test.yml
docs/sphinx/: api.rst  cli_reference.rst  conf.py  index.rst  requirements.txt
examples/: 00_run_all.sh  01_book_persistent_reservation.py  README.md
src/scitex_hpc/: __init__.py  __main__.py  _cli.py  _config.py  _dispatch.py  _modules.py  _reservation.py  _results.py  _sync.py
src/scitex_hpc/_cli/: __init__.py  _apis.py  _completion.py  _mcp_commands.py  _reservations.py  _root.py  _skills.py
src/scitex_hpc/_mcp/: __init__.py  server.py
src/scitex_hpc/_skills/scitex-hpc/: 01_installation.md  01_reservations-api.md  02_quick-start.md  02_reservation-features.md  03_compatibility-policies.md  03_python-api.md  04_cli-reference.md  11_reservations-api.md  12_reservation-features.md  13_compatibility-policies.md  20_env-vars.md  SKILL.md
src/scitex_hpc/_sphinx_html/: .buildinfo  api.html  cli_reference.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_hpc/_sphinx_html/.doctrees/: api.doctree  cli_reference.doctree  environment.pickle  index.doctree
src/scitex_hpc/_sphinx_html/.doctrees/_autosummary/: scitex_hpc.doctree
src/scitex_hpc/_sphinx_html/_autosummary/: scitex_hpc.html
src/scitex_hpc/_sphinx_html/_modules/: index.html
src/scitex_hpc/_sphinx_html/_modules/scitex_hpc/: _config.html  _dispatch.html  _modules.html  _reservation.html  _results.html  _sync.html
src/scitex_hpc/_sphinx_html/_sources/: index.rst.txt
src/scitex_hpc/_sphinx_html/_sources/_autosummary/: scitex_hpc.rst.txt
tests/: conftest.py  test_cli.py  test_config.py  test_dispatch.py  test_reservation.py
tests/develop/: test_audit.py
tests/examples/: test_01_book_persistent_reservation.py
tests/integration/: test_cross_package_imports.py
tests/scitex_hpc/: test__config.py  test__dispatch.py  test__modules.py  test__reservation.py
tests/scitex_hpc/_cli/: test__root.py
tests/scitex_hpc/_mcp/: test_server.py
