[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scitex-hpc"
version = "0.3.0"
description = "Generic SLURM dispatch (srun, sbatch, sync, poll, fetch) for the SciTeX ecosystem — login nodes never run compute"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [{name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai"}]
keywords = ["scitex", "hpc", "slurm", "srun", "sbatch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Clustering",
]
dependencies = ["PyYAML>=5.1"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-timeout", "ruff"]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = ["scitex-hpc[dev,docs]"]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-hpc"
Repository = "https://github.com/ywatanabe1989/scitex-hpc"
Documentation = "https://scitex-hpc.readthedocs.io"

[project.scripts]
scitex-hpc = "scitex_hpc._cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--disable-warnings"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]
