[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scitex-hpc"
version = "0.8.2"
description = "Generic SLURM dispatch (srun, sbatch, sync, poll, fetch) for the SciTeX ecosystem — login nodes never run compute"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [{name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai"}]
keywords = ["scitex", "hpc", "slurm", "srun", "sbatch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Clustering",
]
dependencies = [
    "PyYAML>=5.1",
    "click>=8.0",
    "scitex-config>=0.3.0",
    "scitex-ssh>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-timeout", "ruff", "scitex-dev>=0.11.7"]
mcp = ["fastmcp>=0.1.0"]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx-click>=5.0",
    "scitex-dev>=0.11.7",
]
all = ["scitex-hpc[dev,mcp,docs]"]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-hpc"
Repository = "https://github.com/ywatanabe1989/scitex-hpc"
Documentation = "https://scitex-hpc.readthedocs.io"

[project.entry-points."scitex_dev.skills"]
scitex-hpc = "scitex_hpc"

[project.scripts]
scitex-hpc = "scitex_hpc._cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the SKILL.md leaf so skill-discovery agents (scitex-dev, etc.)
# can find it after `pip install scitex-hpc`.
scitex_hpc = ["_skills/**/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--disable-warnings"]

[tool.coverage.run]
parallel = true
source = ["scitex_hpc"]
concurrency = ["multiprocessing", "thread"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]
